tests/rosetta/out/Smalltalk/DNS-query.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| net res addrs err |
net := Dictionary new.
res := (net at: 'LookupHost') value: 'www.kame.net'.
addrs := res at: 0.
err := res at: 1.
((err = nil)) ifTrue: [
Transcript show: ((addrs asString)) printString; cr.
] ifFalse: [
Transcript show: (err) printString; cr.
].
